--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "postinstall": "node ./.config/index.js"
   },
   "dependencies": {
+    "axios": "^1.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
